--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.7.1",
+    "@react-native-picker/picker": "^2.4.8",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-picker": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
