--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.6",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-modal-datetime-picker": "^14.0.0",
-    "react-native-picker": "^4.3.7"
+    "react-native-modal-picker": "^0.0.16",
+    "react-native-modal-selector": "^2.1.2",
+    "react-native-picker": "^4.3.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
